[package]
name = "staking-tax"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"

[dependencies]
ethers = "2.0.11"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
dotenv = "0.15"
chrono = "0.4"
async-throttle = "0.3"
